Correct Component class. Setup tsconfig.json. Setup bs-config.json. Setup systemjs config file. Move main.ts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "property-wizard-web",
   "description": "Web site of Property Wizard application",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "author": {
     "name": "Alex",
@@ -10,11 +10,38 @@
   },
   "contributors": [],
   "dependencies": {
-    "@google-cloud/debug-agent": "^1.0.0",
-    "@google/cloud-errors": "^0.1.1",
-    "@google/cloud-trace": "^0.6.3",
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2",
-    "googleapis": "^19.0.0"
+    "@angular/common": "~4.0.0",
+    "@angular/compiler": "~4.0.0",
+    "@angular/core": "~4.0.0",
+    "@angular/forms": "~4.0.0",
+    "@angular/http": "~4.0.0",
+    "@angular/platform-browser": "~4.0.0",
+    "@angular/platform-browser-dynamic": "~4.0.0",
+    "@angular/router": "~4.0.0",
+
+    "angular-in-memory-web-api": "~0.3.0",
+    "systemjs": "0.19.40",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.1",
+    "zone.js": "^0.8.4"
+  },
+  "devDependencies": {
+    "concurrently": "^3.2.0",
+    "lite-server": "^2.2.2",
+    "typescript": "~2.1.0",
+
+    "canonical-path": "0.0.2",
+    "lodash": "^4.16.4",
+    "rimraf": "^2.5.4",
+
+    "@types/node": "^6.0.46",
+    "@types/jasmine": "2.5.36"
+  },
+  "scripts": {
+    "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
+    "build": "tsc -p app/",
+    "build:watch": "tsc -p app/ --watch",
+    "serve": "lite-server -c=bs-config.json",
+    "prestart": "npm run build"
   }
 }
