Setup TypeScript compiler output dir (app/build). Add "" to the Readme file.

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -4,6 +4,7 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "sourceMap": true,
+        "outDir": "build",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "lib": [
