--- a/bs-config.json
+++ b/bs-config.json
@@ -1,6 +1,6 @@
 {
   "server": {
-    "baseDir": "",
+    "baseDir": "./",
     "routes": {
       "/node_modules": "node_modules",
       "/public": "public"
