Compile TypeScript in a separate command file. Running both in the same file does not work. Add a favicon.

--- a/bs-config.json
+++ b/bs-config.json
@@ -1,9 +1,10 @@
 {
-  "server": {
-    "baseDir": "./",
-    "routes": {
-      "/node_modules": "node_modules",
-      "/public": "public"
-    }
-  }
+  "server": 
+    {
+      "baseDir": "./",
+      "routes": {
+        "/node_modules": "node_modules",
+        "/public": "public"
+      }
+    }  
 }
