Rename Postcode service file removing the space because of a bug: https://github.com/angular/angular/issues/17401. Add cleanup command before TypeScript compile in dev environment. Add documentation file for package.json file.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/jasmine": "2.5.36"
   },
   "scripts": {    
+    "clean_linux": "rm -rf app/build",
+    "clean_windows": "if exist app\\build rmdir app\\build /s /q",
     "build": "tsc -p app/",
     "build:watch": "tsc -p app/ --watch",
     "start_server": "lite-server -c=bs-config.json",
