Add ,minifiaction with uglify-js.

--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "rxjs": "5.0.1",
     "zone.js": "^0.8.4",
     "typescript": "~2.1.0",    
-    "browserify": "~14.4.0"
+    "browserify": "~14.4.0",
+    "uglify-js": "~3.0.15"
   },
   "devDependencies": {
     "concurrently": "^3.2.0",
     "lite-server": "^2.2.2",
     "typescript": "~2.1.0",       
     "browserify": "~14.4.0",
+    "uglify-js": "~3.0.15",
 
     "canonical-path": "0.0.2",
     "lodash": "^4.16.4",
@@ -42,11 +44,12 @@
   "scripts": {    
     "clean_linux": "rm -rf app/build",
     "clean_windows": "if exist app\\build rmdir app\\build /s /q",
-    "build_": "tsc -p app/",
-    "build": "tsc -p app/ && browserify app/build/main.js -o bundle.js",
-    "build:watch": "tsc -p app/ --watch",
+    "build": "tsc -p app/",
+    "bundle": "browserify app/build/main.js -o bundle.js",
+    "minify": "uglifyjs bundle.js --mangle --compress -o bundle.min.js",
+    "build:watch": "tsc -p app/ --watch ",
+    "build:prod": "npm run build && npm run bundle && npm run minify",
     "start_server": "lite-server -c=bs-config.json",
-    "prestart": "npm run build",
     "start_dev": "concurrently \"npm run build:watch\" \"npm run start_server\""
   }
 }
