--- a/bs-config.prod.json
+++ b/bs-config.prod.json
@@ -2,7 +2,7 @@
   "port": 80,
   "server": 
     {
-      "baseDir": "./",
+      "baseDir": "/",
       "routes": {
         "/node_modules": "node_modules",
         "/public": "public"
