--- a/bs-config.prod.json
+++ b/bs-config.prod.json
@@ -1,8 +1,7 @@
 {
-  "port": 80,
   "server": 
     {
-      "baseDir": "/",
+      "baseDir": "./",
       "routes": {
         "/node_modules": "node_modules",
         "/public": "public"
