--- a/bs-config.prod.json
+++ b/bs-config.prod.json
@@ -1,10 +1,11 @@
 {
-  "server": 
-    {
-      "baseDir": "./",
-      "routes": {
-        "/node_modules": "node_modules",
-        "/public": "public"
-      }
-    }  
+    "open": false,
+    "port":  8080,
+    "server": {
+        "baseDir": "./",
+        "routes": {
+            "/node_modules": "node_modules",
+            "/public": "public"
+        }
+    }
 }
