--- a/bs-config.prod.json
+++ b/bs-config.prod.json
@@ -7,5 +7,8 @@
             "/node_modules": "node_modules",
             "/public": "public"
         }
+    },
+    "ui": {
+      "port": 80
     }
 }
