Try to use the dynamic port assigned by Heroku.

--- a/bs-config.prod.json
+++ b/bs-config.prod.json
@@ -1,14 +1,11 @@
 {
     "open": false,
-    "port":  8080,
+    "port":  process.env.PORT,
     "server": {
         "baseDir": "./",
         "routes": {
             "/node_modules": "node_modules",
             "/public": "public"
         }
-    },
-    "ui": {
-      "port": 80
     }
 }
