Try to force web process to use a specific port.

--- a/bs-config.prod.json
+++ b/bs-config.prod.json
@@ -1,6 +1,6 @@
 {
     "open": false,
-    "port":  process.env.PORT,
+    "port": 3001,
     "server": {
         "baseDir": "./",
         "routes": {
