--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "build:watch": "tsc -p app/ --watch ",
     "build:prod": "npm run build && npm run bundle && npm run minify",
     "start_server": "lite-server -c=bs-config.json",
-    "start": "lite-server -c=bs-config.prod.json",
+    "start": "lite-server -c=bs-config.prod.js",
     "start_dev": "concurrently \"npm run build:watch\" \"npm run start_server\""
   }
 }
