--- a/package.json
+++ b/package.json
@@ -18,32 +18,29 @@
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
-
-    "lite-server": "^2.2.2",
-
-    "systemjs": "0.19.40",
-    "core-js": "^2.4.1",
-    "rxjs": "5.0.1",
-    "zone.js": "^0.8.4",
-    "typescript": "~2.1.0",    
+    "bootstrap": "^4.0.0-alpha.6",
     "browserify": "~14.4.0",
-    "uglify-js": "~3.0.15"
+    "core-js": "^2.4.1",
+    "lite-server": "^2.2.2",
+    "rxjs": "5.0.1",
+    "systemjs": "0.19.40",
+    "typescript": "~2.1.0",
+    "uglify-js": "~3.0.15",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "concurrently": "^3.2.0",
     "lite-server": "^2.2.2",
-    "typescript": "~2.1.0",       
+    "typescript": "~2.1.0",
     "browserify": "~14.4.0",
     "uglify-js": "~3.0.15",
-
     "canonical-path": "0.0.2",
     "lodash": "^4.16.4",
     "rimraf": "^2.5.4",
-
     "@types/node": "^6.0.46",
     "@types/jasmine": "2.5.36"
   },
-  "scripts": {    
+  "scripts": {
     "clean_linux": "rm -rf app/build",
     "clean_windows": "if exist app\\build rmdir app\\build /s /q",
     "build": "tsc -p app/",
