--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "bootstrap": "^4.0.0-alpha.6",
     "browserify": "~14.4.0",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
     "lite-server": "^2.2.2",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
+    "tether": "^1.4.0",
     "typescript": "~2.1.0",
     "uglify-js": "~3.0.15",
     "zone.js": "^0.8.4"
