Update all packages.

--- a/package.json
+++ b/package.json
@@ -10,37 +10,35 @@
   },
   "contributors": [],
   "dependencies": {
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/router": "~4.0.0",
+    "@angular/common": "^4.2.3",
+    "@angular/compiler": "^4.2.3",
+    "@angular/core": "^4.2.3",
+    "@angular/forms": "^4.2.3",
+    "@angular/http": "^4.2.3",
+    "@angular/platform-browser": "^4.2.3",
+    "@angular/platform-browser-dynamic": "^4.2.3",
+    "@angular/router": "^4.2.3",
+    "@types/jasmine": "^2.5.52",
+    "@types/node": "^7.0.31",
     "bootstrap": "^4.0.0-alpha.6",
-    "browserify": "~14.4.0",
+    "browserify": "^14.4.0",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "lite-server": "^2.2.2",
-    "rxjs": "5.0.1",
-    "systemjs": "0.19.40",
+    "rxjs": "^5.4.1",
+    "systemjs": "^0.20.14",
     "tether": "^1.4.0",
-    "typescript": "~2.1.0",
-    "uglify-js": "~3.0.15",
+    "typescript": "^2.1.0",
+    "uglify-js": "^3.0.15",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "concurrently": "^3.2.0",
-    "lite-server": "^2.2.2",
-    "typescript": "~2.1.0",
-    "browserify": "~14.4.0",
-    "uglify-js": "~3.0.15",
     "canonical-path": "0.0.2",
     "lodash": "^4.16.4",
     "rimraf": "^2.5.4",
-    "@types/node": "^6.0.46",
-    "@types/jasmine": "2.5.36"
+    "@types/node": "^7.0.31",
+    "@types/jasmine": "^2.5.36"
   },
   "scripts": {
     "clean_linux": "rm -rf app/build",
